// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extends Class Getter Setter Should extends overridden getter setter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        MyClass,
        OtherClass,
      ],
      "set": set prop,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Getter Setter Should extends parent getter setter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        MyClass,
      ],
      "set": set prop,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Getter Setter Should get getter setter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        OtherClass,
      ],
      "set": set prop,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Method Should add method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "owner": Array [
        OtherClass,
      ],
      "parameters": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "par1",
          "owner": Array [
            OtherClass,
          ],
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Method Should extends overridden method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "owner": Array [
        MyClass,
        OtherClass,
      ],
      "parameters": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "par1",
          "owner": Array [
            MyClass,
            OtherClass,
          ],
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Method Should extends overridden method parameters 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "owner": Array [
        MyClass,
        OtherClass,
      ],
      "parameters": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "par1",
          "owner": Array [
            MyClass,
            OtherClass,
          ],
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Method Should extends parent method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "owner": Array [
        MyClass,
      ],
      "parameters": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "par1",
          "owner": Array [
            MyClass,
          ],
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Parameter Property Should parse overridden parent properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "fields": Object {},
        "index": 0,
        "kind": "Parameter",
        "name": "par1",
        "owner": Array [
          MyClass,
          OtherClass,
        ],
        "type": undefined,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par1",
      "owner": Array [
        MyClass,
        OtherClass,
      ],
      "set": undefined,
      "type": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Parameter Property Should parse parameter properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "fields": Object {},
        "index": 0,
        "kind": "Parameter",
        "name": "par1",
        "owner": Array [
          OtherClass,
        ],
        "type": undefined,
      },
      Object {
        "decorators": Array [],
        "fields": Object {},
        "index": 1,
        "kind": "Parameter",
        "name": "par2",
        "owner": Array [
          OtherClass,
        ],
        "type": undefined,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par1",
      "owner": Array [
        OtherClass,
      ],
      "set": undefined,
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 1,
      "isParameter": true,
      "kind": "Property",
      "name": "par2",
      "owner": Array [
        OtherClass,
      ],
      "set": undefined,
      "type": undefined,
    },
  ],
  "super": Object,
  "type": OtherClass,
}
`;

exports[`Extends Class Parameter Property Should parse parent parameter properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par1",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 1,
      "isParameter": true,
      "kind": "Property",
      "name": "par2",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
      "type": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Parameter Property Should parse parent properties and child properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "fields": Object {},
        "index": 0,
        "kind": "Parameter",
        "name": "par3",
        "owner": Array [
          OtherClass,
        ],
        "type": undefined,
      },
      Object {
        "decorators": Array [],
        "fields": Object {},
        "index": 1,
        "kind": "Parameter",
        "name": "par4",
        "owner": Array [
          OtherClass,
        ],
        "type": undefined,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par3",
      "owner": Array [
        OtherClass,
      ],
      "set": undefined,
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 1,
      "isParameter": true,
      "kind": "Property",
      "name": "par4",
      "owner": Array [
        OtherClass,
      ],
      "set": undefined,
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par1",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 1,
      "isParameter": true,
      "kind": "Property",
      "name": "par2",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
      "type": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Property Field Should add method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        OtherClass,
      ],
      "set": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Property Field Should extends overridden method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        MyClass,
        OtherClass,
      ],
      "set": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Property Field Should extends parent property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Should extends class 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Should extends from multiple classes 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    GrandParent,
    MyClass,
    OtherClass,
  ],
  "properties": Array [],
  "super": MyClass,
  "type": OtherClass,
}
`;

exports[`Extends Class Should not extends constructor 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "OtherClass",
  "owner": Array [
    Object,
    MyClass,
    OtherClass,
  ],
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "par1",
      "owner": Array [
        MyClass,
      ],
      "set": undefined,
      "type": undefined,
    },
  ],
  "super": MyClass,
  "type": OtherClass,
}
`;
